# pgp-rs

./: .travis.yml  Cargo.toml
src/: armor.rs  errors.rs  lib.rs  publickey.rs  util.rs
